# TestCore

./: .gitignore  README.md  pyproject.toml
cli/: README.md  build.bat  testcore_cli.c
cli/linenoise/: LICENSE  linenoise-win32.c
testcore/: __init__.py  __main__.py  base_driver.py  commands.py  events.py  health.py  instruments.py  journal.py  protocol.py  server.py  store.py  transport.py  watch.py
testcore/drivers/: __init__.py
testcore/drivers/agilent33500/: EXAMPLES.md  __init__.py  driver.py  resources.py
testcore/drivers/dryrun/: EXAMPLES.md  __init__.py
testcore/drivers/generic_scpi/: __init__.py
testcore_client/: __init__.py  client.py  connection.py  exceptions.py
tests/: __init__.py  test_agilent33500.py  test_alias_commands.py  test_bench.py  test_client.py  test_client_lib.py  test_commands.py  test_dump.py  test_events.py  test_generic_scpi.py  test_health.py  test_inline.py  test_instrument_commands.py  test_instruments.py  test_integration.py  test_journal.py  test_kgetall.py  test_kv_commands.py  test_lock_commands.py  test_parallel_dispatch.py  test_protocol.py  test_resource_commands.py  test_server.py  test_server_commands.py  test_store.py  test_watch.py
